--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
