--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.2",
+    "@mui/material": "^5.14.3",
     "firebase": "^10.1.0",
     "framer-motion": "^10.12.16",
+    "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
